<resources>
    <string name="app_name">CardioApplication</string>
    <string name="action_settings">Settings</string>
    <string name="btn_seeMap">Térkép!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="btn_startMeasure">Start</string>
    <string name="toast_playservices_unrecoverable">Google Play Services not Available</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="google_app_id">robotic-idiom-124910</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="string_first_name">* Vezetéknév:</string>
    <string name="string_last_name">* Keresztnév:</string>
    <string name="string_birth_date">* Születési dátum</string>
    <string name="string_tel_number">* Telefonszám:</string>
    <string name="string_email">* E-mail cím:</string>
    <string name="string_continue">Tovább</string>
    <string name="string_height">* Testmagasság:</string>
    <string name="string_weight">* Testsúly:</string>
    <string name="string_smoking">*Dohányzik?</string>
    <string name="string_diabetes">Cukorbetegség</string>
    <string name="string_coronary">Ismert koszorúér betegség</string>
    <string name="string_yes">Igen</string>
    <string name="string_no">Nem</string>
    <string name="string_dontknow">Nem tudom</string>
    <string name="string_highblood">Magas vérnyomás</string>
    <string name="string_give_value">Kérem adja meg az értékét:</string>
    <string name="string_triglicerid">Magas triglicerid szint</string>
    <string name="string_back">Vissza</string>
    <string name="string_maxBpm">Maximum BPM:</string>
    <string name="string_minBpm">Minimum BPM:</string>
    <string name="string_averageBpm">Átlag BPM:</string>
    <string name="string_bpm">bpm</string>
    <string name="string_go">Indulj!</string>
    <string name="string_pause">Szünet</string>
    <string name="string_finish">Vége</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="string_place_birth">Születési hely:</string>
</resources>
