<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="1">


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="250sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMaxBpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_maxBpm"
            android:padding="@dimen/fab_margin"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvMaxBpmValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMinBpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_minBpm"
            android:padding="@dimen/fab_margin"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvMinBpmValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAverageBpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:text="@string/string_averageBpm"
            android:textColor="#000000"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvAverageBpmValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"/>

    </LinearLayout>




</LinearLayout>